--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
+0.03    2009-03-03
+        - fix Makefile.PL - Catalyst 5.71 required
 0.02    2009-03-02
-        -  bug fix (if predefined config used)
+        - bug fix (if predefined config used)
 0.01	2009-03-02
 	- Initial release
