--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.04    2009-03-10
+        - critical fix for Win32: was broken.
 0.03    2009-03-03
         - fix Makefile.PL - Catalyst 5.71 required
 0.02    2009-03-02
