--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.05    2009-03-18
+        - embed configuration for plugins in root ns.
 0.04    2009-03-10
         - critical fix for Win32: was broken.
 0.03    2009-03-03
