Import of SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-ConfigLoader-MultiState
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SYBER/Catalyst-Plugin-ConfigLoader-MultiState-0.06.tar.gz
gitpan-cpan-author:       SYBER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.06    2010-03-29
+        - bugfixes
 0.05    2009-03-18
         - embed configuration for plugins in root ns.
 0.04    2009-03-10
